[gd_scene load_steps=3 format=3 uid="uid://c6v3nqo1no8ti"]

[ext_resource type="Script" path="res://Scenes/UIs/Menus/Settings/Settings.gd" id="1_k4wg7"]
[ext_resource type="Theme" uid="uid://c3u7pkv4gva6m" path="res://Scenes/UIs/UI_Settings/PurpleMana.tres" id="1_ty1e1"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ty1e1")
script = ExtResource("1_k4wg7")
metadata/_edit_vertical_guides_ = [407.0, 474.0, 745.0, 577.0]

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -56.5
offset_right = 168.0
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Video" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "VIDEO"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "AUDIO
"

[node name="BackFromOptions" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -118.0
offset_top = 211.0
offset_right = 118.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = -574.0
offset_top = -326.0
offset_right = 574.0
offset_bottom = 324.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -82.0
offset_right = 128.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -244
alignment = 1

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
custom_minimum_size = Vector2(326, 0)
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
size_flags_vertical = 3
text = "Fullscreen"
icon_alignment = 2

[node name="Bordeless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
size_flags_vertical = 3
text = "Borderless"

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
custom_minimum_size = Vector2(30, 25)
layout_mode = 2
size_flags_vertical = 3
text = "Vsync"

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -56.0
offset_right = 114.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = -575.0
offset_top = -322.0
offset_right = 578.0
offset_bottom = 326.0
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -186.0
offset_top = -82.0
offset_right = 186.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 22
metadata/_edit_lock_ = true

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 1
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 1
text = "Music
"

[node name="Sound FX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 1
text = "Sound FX
"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 34

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true

[node name="Sound FX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 1
max_value = 1.0
step = 0.05
value = 0.5
ticks_on_borders = true

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.976
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -119.5
offset_top = -100.448
offset_right = 116.5
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
text = "Back
"

[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/BackFromOptions" to="." method="_on_back_from_options_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Bordeless" to="." method="_on_bordeless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
